--- a/literatur.bib
+++ b/literatur.bib
@@ -8,22 +8,40 @@
                 author = " May et al",
                 title = "PTGL: a database for secondary structure-based protein topologies",
                 journal = "Nucleic Acids Research",
-                year = "2009" }
+                year = "2010" }
 
-@article{ vplg,
-                author = "Schafer et al",
-                title = "Computation and visualization of protein topology graphs including ligand information",
-                journal = "Bioinformatics",
-                year = "2015" }
+@InProceedings{vplg,
+  author =	{Tim Sch{\"a}fer and Patrick May and Ina Koch},
+  title =	{{Computation and Visualization of Protein Topology Graphs Including Ligand Information}},
+  booktitle =	{German Conference on Bioinformatics 2012},
+  pages =	{108--118},
+  series =	{OpenAccess Series in Informatics (OASIcs)},
+  ISBN =	{978-3-939897-44-6},
+  ISSN =	{2190-6807},
+  year =	{2012},
+  volume =	{26},
+  editor =	{Sebastian B{\"o}cker and Franziska Hufsky and Kerstin Scheubert and Jana Schleicher and Stefan Schuster},
+  publisher =	{Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik},
+  address =	{Dagstuhl, Germany},
+  URL =		{http://drops.dagstuhl.de/opus/volltexte/2012/3722},
+  URN =		{urn:nbn:de:0030-drops-37226},
+  doi =		{http://dx.doi.org/10.4230/OASIcs.GCB.2012.108},
+  annote =	{Keywords: protein structure, graph theory, ligand, secondary structure, protein ligang graph}
+
+@article{new_ptgl,
+               author = {Tim Sch{\"a}fer, Andreas Scheck, Daniel Brune{\"s}, Patrick May and Ina Koch},
+               title = "the new protein topology graph library web server",
+               journal = "Bioinformatics",
+               year = "2015}
           
 @article{ graphletfrequency,
-                author = "N. Przulj et al",
+                author = "N. Prz{\v u}lj et al",
                 title = "Efficient estimation of graphlet frequency distributions in protein-protein interaction networks",
                 journal = "Bioinformatics",
                 year = "2006" }
           
 @article{ frqdistribution,
-                author = "Przulj et al",
+                author = "Prz{\v u}lj et al",
                 title = "Modelling interactome: scale-free or geometric",
                 journal = "Bioinformatics",
                 year = "2004" }
