--- a/arbeit.tex
+++ b/arbeit.tex
@@ -9,6 +9,7 @@
 \usepackage{rotating}
 \usepackage[table, dvipsnames, usenames]{xcolor}
 \usepackage{color}
+%\usepackage{algorithm2e}
 %\usepackage{qtree}
 %\usepackage{cite}
 \definecolor{fGreen}{rgb}{0.13,0.54,0.13}
@@ -144,12 +145,35 @@ w_5 := \left( \frac{1}{120}, \frac{1}{72}, \frac{1}{48}, \frac{1}{36}, \frac{1}{
 Jede Stelle eines Vektors $w_i$ ist mit einem \textit{Graphlet} assoziiert. Da der Algorithmus alle Euler-Wege einer L\"ange $i$ in dem Graphen abl\"auft, sind in den Vektoren Br\"uche eingetragen, wobei der Z\"ahler f\"ur die Anzahl der Euler-Wege der L\"ange $i$ steht. Dies stimmt nat\"urlich nicht f\"ur die sogenannten Stern-\textit{Graphlets} ($g_4$ in \ref{fig:4graphlets} $g_{19}$,$g_{20}$ und $g_{21}$ in \ref{fig:5graphlets}). Da diese keinen Euler-Weg der L\"ange 4 bzw. 5 enthalten werden sie anders gez\"ahlt.
 (beispiel mit Pseudocode einf\"ugen?)
 
-\paragraph{Markierte \textit{Graphlets}}
-werden ebenfalls durch den Algorithmus gez\"ahlt. In dieser Implementierung z\"ahlt der Algorithmus \textit{Graphlets} mit Knotenmarkierungen, die in der Konfigurationsdatei vorgegeben werden k\"onnen.
- Es werden alle kombinatorisch m\"oglichen Markierungen von \textit{Graphlets} bis zur Gr\"o"se 3 betrachtet.
- Gr\"o"sere markierte \textit{Graphlets} werden ignoriert, um die Laufzeit niedrig zu halten.
-Da die Markierungen von SSE-Graphen und AA-Graphen betrachtet werden, werden verschiedene Vektoren \"uber verschiedenen Alphabeten verwendet.\\
-Die Vektoren $p_2, p_{3-Weg}$ und $p_{3-Kreis}$ beschreiben die verschiedenen Worte f\"ur den 2-Pfad, den 3-Weg und den 3-Kreis in Proteingraphen.
+\subsection{Der \textit{Graphlet}-Worte-Algorithmus}
+
+In der letzten Version von \texttt{graphletAnalyser} war es bereits m\"oglich markierte \textit{Graphlets} mit 2 und 3 Knoten in Proteingraphen zu z\"ahlen. Diese Funktionalit\"at wurde im Rahmen dieser Arbeit verallgemeinert, so dass der Nutzer beliebige Alphabete angeben kann.
+Der Algorithmus erh\"alt das Alphabet $\sum = \{ \sigma_i : i \in \mathbb{N} \}$ der Knotenmarkierungen. Aus diesem Alphabet berechnet er Worte $w$, die zur Repr\"asentation der markierten \textit{Graphlets} genutzt werden.
+Hierbei k\"onnen verschiedene Worte das gleiche \textit{Graphlet} repr\"asentieren. Im Falle von 2-\textit{Graphlets} repr\"asentieren die zwei Worte $(\sigma_i,\sigma_j)$ und $(\sigma_j, \sigma_i)$ das gleiche markierte \textit{Graphlet} mit den Knotenmarkierungen $\sigma_i,\sigma_j$. Worte, die das gleiche \textit{Graphlet} repr\"asentieren, werden im Folgenden als \emph{\"aquivalente Graphlet-Worte}  bezeichnet.
+
+
+Die Berechnung der \"aquivalenten \textit{Graphlet}-Worte der L\"ange 2 ist trivial. Aus dem Alphabet $\sum$ werden alle Worte $w = (\sigma_i, \sigma_j)$ berechnet, wobei Spiegelungen nicht mit ausgegeben werden, da zwei Worte $ (\sigma_j, \sigma_i) $ und $ (\sigma_j, \sigma_i) $ \"aquivalente \textit{Graphlet}-Worte sind.
+
+Die Berechnung aller \"aquivalenten \textit{Graphlet}-Worte der L\"ange 3 ist komplizierter, da sie f\"ur zwei verschiedene \textit{Graphlets} berechnet werden m\"ussen. F\"ur das \textit{Graphlet} $g_1$ sind alle Worte \"aquivalent zueinander, die zyklische Vertauschungen voneinander sind. F\"ur das \textit{Graphlet} $g_2$ sind Worte \"aquivalent zueinander, die Spiegelungen voneinander sind (siehe Abbildung \ref{fig:3graphlets}).
+
+
+
+%\begin{algorithmic}
+%\For{ i = 0 to n}
+%do something
+%\For{ k = i + 1 to n}
+%do something
+%\For{ m = k + 1 to n}
+%do something
+%\EndFor
+%\EndFor
+%\EndFor
+%\end{algorithmic}
+
+Der Algorithmus besteht aus 3 \textit{for}-Schleifen, die \"uber das Alphabet iterieren. In der \"au"sersten Schleife werden Worte hinzugef\"ugt, in denen alle Buchstaben gleich sind.
+In der zweiten Schleife wird jeweils der n\"achste Buchstabe des Alphabets betrachtet. F\"ur jedes Paar $a, b$ von Buchstaben \"uber einem Alphabet $\sum$ sind die Mengen der \"aquivalenten Worte f\"ur das \textit{Graphlet} $g_1$ $P_{3-Kreis} = \{ \}$ und $P_{3-Pfad} = \{ aaa, aba, aab  \}$ f\"ur das \textit{Graphlet} $g_2$
+
+
 
 
 \begin{subequations}
@@ -210,8 +234,8 @@ mit F_{i}(G) := - log(\frac{N_{i}(G)}{T(G)})
 
 
 
-Diese Metrik l\"asst sich analog zur euklidischen Distanz, oder einer beliebigen anderen Vektornorm auffassen, denn sie berechnet f\"ur jeden Index $i$ die Differenz zwischen den Stellen $x_i,y_i$ zweier Vektoren $x$ und $y$. Sie verwendet die normalisierten \textit{Graphlet}-Vektoren unter der Annahme, dass die \"Ahnlichkeit zweier Netzwerke sich aus der \"Ahnlichkeit lokaler Substrukturen ableiten l\"asst \cite{frqdistribution}. Somit k\"onnen Netzwerke, die \"ahnliche Substrukturen habe, sich aber in ihrer Gr\"o"se starkt unterschieden, immer noch als \"ahnlich erkannt werden.
-Weiterhin wurde gezeigt, \cite{frqdistribution} dass diese Metrik auch bei verrauschten Daten noch sehr gut funktioniert. Hierbei ist jedoch zu beachten, dass sie bisher vor allem f\"ur sehr gro"se Netzwerke mit mehreren Tausend Knoten und Kanten verwendet wurde. Diese Gr\"o"se kann zwar von Aminos\"auregraphen erreicht werden, wenn sie gro"se Proteine modellieren. Proteingraphen und Komplexgraphen sind aber deutlich kleiner.
+Diese Metrik l\"asst sich analog zur euklidischen Distanz, oder einer beliebigen anderen Vektornorm auffassen, denn sie berechnet f\"ur jeden Index $i$ die Differenz zwischen den Stellen $x_i,y_i$ zweier Vektoren $x$ und $y$. Sie verwendet die normalisierten \textit{Graphlet}-Vektoren unter der Annahme, dass die \"Ahnlichkeit zweier Netzwerke sich aus der \"Ahnlichkeit lokaler Substrukturen ableiten l\"asst \cite{frqdistribution}. Somit k\"onnen Netzwerke, die \"ahnliche Substrukturen habe, sich aber in ihrer Gr\"o"se stark unterschieden, immer noch als \"ahnlich erkannt werden.
+Weiterhin wurde gezeigt, \cite{frqdistribution} dass diese Metrik auch bei verrauschten Daten noch sehr gut funktioniert. Hierbei ist jedoch zu beachten, dass sie bisher vor allem f\"ur sehr gro"se Netzwerke mit mehreren Tausend Knoten und Kanten verwendet wurde. Diese Gr\"o"se kann von Aminos\"auregraphen erreicht werden, wenn sie gro"se Proteine modellieren. Proteingraphen und Komplexgraphen sind aber deutlich kleiner.
 
 
 \subsection{Modifizierter Jaccard-Index}
